<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
<item
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:title="@string/home"
/>

    <item
            android:id="@+id/contact"
            android:icon="@drawable/chat"
            android:title="@string/Contact"
    />

    <item
            android:id="@+id/gallery"
            android:icon="@drawable/gallery"
            android:title="@string/gallery"
    />



</group>

    <item android:title="@string/profile">
         <menu>
             <group android:checkableBehavior="single">
<item
        android:id="@+id/about"
        android:title="@string/about"
        android:icon="@drawable/about"
/>

      <item
       android:id="@+id/login"
       android:title="@string/login"
        android:icon="@drawable/login"
                 />

             </group>
         </menu>
    </item>




    <item android:title="@string/communication">
        <menu>
            <group android:checkableBehavior="single">
                <item
                        android:id="@+id/share"
                        android:title="@string/Share"
                        android:icon="@drawable/share"
                />

                <item
                        android:id="@+id/rateus"
                        android:title="@string/rateus"
                        android:icon="@drawable/rateus"
                />

            </group>
        </menu>
    </item>


</menu>